[package]
name = "zimg"
version = "0.1.0"
authors = ["caiwei03 <caiwei03@ky-tech.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.4.0"
router = "0.4.0"
image = "0.9.1"
time = "0.1.35"
rustc-serialize = "0.3.19"
rust-crypto = "0.2.35"

[dependencies.multipart]
version = "0.9.1"
default-features = false
features = ["server", "iron"]