[package]
name = "rust-zimg"
version = "0.1.0"
authors = ["caiwei03 <caiwei03@ky-tech.com.cn>"]
edition = "2018"
license = "MIT"
description = "a lightweight image storage and processing system. It's written in Rust and it has high performance in image field."
readme = "README.md"
homepage = "https://github.com/Mignet/rust-zimg"
repository = "https://github.com/Mignet/rust-zimg"
keywords = ["rust", "image", "cloud"]
categories = ["web-programming::http-server"]

[dependencies]
iron = "0.4.0"
router = "0.4.0"
image = "0.9.1"
time = "0.1.35"
rustc-serialize = "0.3.19"
rust-crypto = "0.2.35"

[dependencies.multipart]
version = "0.9.1"
default-features = false
features = ["server", "iron"]